# ChatStorage

./: README.md  logging.prop  meson.build
doc/: ChatStorage_Dataflow.puml  ChatStorage_HighLevel_Architecture.puml
include/chatstorage/: Chat.h  ChatContext.h  ChatSource.h  ChatStorage.h  ChatStorageImporter.h  Media.h  Message.h  User.h
src/: meson.build
src/common/: FileNotFoundException.cpp  FileNotFoundException.h  FileUtil.cpp  FileUtil.h  Logger.h  StringUtil.cpp  StringUtil.h  meson.build  pacman.cpp  platform.h
src/core/: Chat.cpp  ChatContext.cpp  ChatStorage.cpp  ChatStorageImporter.cpp  Media.cpp  Message.cpp  User.cpp  meson.build
src/database/: ChatRepository.cpp  ChatRepository.h  ChatRow.h  MediaRepository.cpp  MediaRepository.h  MediaRow.h  MessageRepository.cpp  MessageRepository.h  MessageRow.h  PersistenceManager.cpp  PersistenceManager.h  SQLiteConnection.cpp  SQLiteConnection.h  Statement.cpp  Statement.h  UserRepository.cpp  UserRepository.h  UserRow.h  meson.build
src/importer/: AbstractChatParser.h  ChatFormatAStreamParser.cpp  ChatFormatAStreamParser.h  ChatImportContext.h  ChatParserFactory.cpp  ChatParserFactory.h  ImportChat.cpp  ImportChat.h  ImportManager.cpp  ImportManager.h  ImportMedia.cpp  ImportMedia.h  ImportMessage.cpp  ImportMessage.h  ImportUser.cpp  ImportUser.h  meson.build
test/module/: TestHelpers.cpp  TestHelpers.h  TestMain.cpp  meson.build
test/module/importer/: ChatFormatAStreamParserTest.cpp  ChatFormatAStreamParserTest.h
tools/: meson.build
tools/chatstorage-cli/: chatstorage-import.cpp  chatstorage-inspect.cpp  chatstorage-view.cpp  meson.build
